apps-pipeline/base/sonarqube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:lts
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube-data
            - mountPath: /opt/sonarqube/logs
              name: sonarqube-logs
            - mountPath: /opt/sonarqube/extensions
              name: sonarqube-extensions
          resources:
            limits:
              memory: "2Gi"
      volumes:
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonarqube-pvc
        - name: sonarqube-logs
          emptyDir: {}
        - name: sonarqube-extensions
          emptyDir: {}
