apps-pipeline/base/sonarqube/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
  labels:
    app: sonarqube
spec:
  to:
    kind: Service
    name: sonarqube
  port:
    targetPort: 9000
  tls:
    termination: edge
